--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @font-face {
         font-family: "bttf";
-        src: url("fonts/bttf.ttf");
+        src: url("./fonts/bttf.ttf");
       }
       :root {
         --color-engineering-international-orange: #b50d13;
