--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="manifest" href="manifest.json" />
     <title>Outatime Dev</title>
+
     <style>
       @font-face {
         font-family: "bttf";
