Revert "new color scheme :)"
This reverts commit 8d1c598ee06ee457fb43ce3e88021db8d7201a67.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
         --color-miragold: #f0a81a;
         --color-metallic-yellow: #f7dc11;
         --color-ball-blue: #2d9cce;
-        --color-1: #ff321a;
-        --color-2: #ff901b;
-        --color-3: #e200f7;
-        --color-4: #450eff;
-        --color-5: #00ff00;
-        --color-6: #220070;
       }
       body {
         background-color: black;
@@ -42,9 +36,9 @@
         text-transform: uppercase;
         margin-bottom: 0;
         background: linear-gradient(
-          var(--color-4) 0%,
-          var(--color-1) 50%,
-          var(--color-2) 100%
+          var(--color-engineering-international-orange) 0%,
+          var(--color-princeton-orange) 50%,
+          var(--color-metallic-yellow) 100%
         );
         background-clip: text;
         -webkit-background-clip: text;
