--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
   </head>
   <body>
     <h1><a href="https://twitter.com/outatimedev">Outatime Dev &#60;</a></h1>
-    <h2><pre>Coding at 88mph</pre></h2>
+    <h2><pre>Turning ☕ into code at 88mph</pre></h2>
   </body>
 </html>
