add schema data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="icon" href="/images/favicon.ico" />
     <link rel="manifest" href="manifest.json" />
     <title>Outatime Dev</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Outatime Dev",
+        "url": "",
+        "image": "",
+        "sameAs": [
+          "https://twitter.com/OutatimeDev",
+          "https://github.com/outatimedev",
+          ""
+        ],
+        "jobTitle": "Dev"
+      }
+    </script>
 
     <style>
       @font-face {
